--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -98,10 +98,10 @@
 
 
 
-@media (min-width:768px)
+@media (min-width:1440px)
 {
     .header {
-        width: 483px;
+        width: 33.5%;
         height: 100vh;
 
         &__card-1
