--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,11 +15,19 @@ body {
   margin-bottom: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1440px) {
   body {
     display: flex;
   }
 }
+.heading-l, .card-form__btn, .card-form__input {
+  font-size: 1.125rem;
+}
+
+.body-m, .card-form__input-error, .card-form__input-label {
+  font-size: 0.75rem;
+}
+
 .header {
   background-image: url(../../images/bg-main-mobile.png);
   background-repeat: no-repeat;
@@ -91,9 +99,9 @@ body {
   margin-left: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1440px) {
   .header {
-    width: 483px;
+    width: 33.5%;
     height: 100vh;
   }
   .header__card-1 {
@@ -129,6 +137,89 @@ body {
   .card__secret-num {
     margin-top: 6.7em;
     margin-right: 2.5em;
+  }
+}
+.main {
+  padding: 5.68em 6.4%;
+}
+
+.card-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 0.68em;
+  row-gap: 1.25em;
+  max-width: 381px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.card-form__input {
+  border: solid 1px #DFDEE0;
+  border-radius: 8px;
+  padding: 0.61em 0.88em;
+  width: 100%;
+}
+.card-form__input-container {
+  display: flex;
+  flex-direction: column;
+}
+.card-form__input-container.invalid .card-form__input-error {
+  display: block;
+}
+.card-form__input-container.invalid .card-form__input {
+  border-color: #FF5050;
+}
+.card-form__input-label {
+  margin-bottom: 0.75em;
+  letter-spacing: 0.16em;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.card-form__input-error {
+  margin-top: 0.6em;
+  color: #FF5050;
+  display: none;
+}
+.card-form__name-container {
+  grid-column: 1/-1;
+  grid-row: 1/2;
+}
+.card-form__number-container {
+  grid-column: 1/-1;
+  grid-row: 2/3;
+}
+.card-form__date-container {
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+.card-form__cvc-container {
+  grid-column: 2/-1;
+  grid-row: 3/4;
+}
+.card-form__date {
+  display: flex;
+  column-gap: 0.625em;
+}
+.card-form__btn {
+  grid-column: 1/-1;
+  font-family: inherit;
+  background-color: #21092F;
+  color: white;
+  padding: 0.83em 0;
+  border-radius: 8px;
+  border: none;
+  transition: all 300ms;
+  cursor: pointer;
+}
+.card-form__btn:hover {
+  transform: scale(1.1);
+  filter: brightness(120%);
+}
+
+@media (min-width: 1440px) {
+  .main {
+    width: 66%;
+    display: flex;
+    align-items: center;
   }
 }
 
